Fix misalignment of inputs

--- a/client/components/app/locations-dropdown/styles.scss
+++ b/client/components/app/locations-dropdown/styles.scss
@@ -8,7 +8,6 @@ $bg: #3b3d42;
 .locate-user-presets {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1.6em;
   padding: 0 !important;
   width: auto;
 
